# yolo_centos

./: CMakeLists.txt
cmake/: Dependencies.cmake~  cuda.cmake
src/: CMakeLists.txt  activation_layer.c  activation_layer.h  activations.h  avgpool_layer.c  avgpool_layer.h  batchnorm_layer.c  batchnorm_layer.h  blas.h  classifier.c  col2im.h  connected_layer.c  connected_layer.h  convolutional_kernels.cu  convolutional_layer.c  convolutional_layer.h  cost_layer.c  cost_layer.h  crnn_layer.c  crnn_layer.h  crop_layer.c  crop_layer.h  cuda.c  cuda.h  darknet.c  deconvolutional_layer.c  deconvolutional_layer.h  detection_layer.c  detection_layer.h  detector.c  dropout_layer.c  dropout_layer.h  gemm.c  gemm.h  go.c  gru_layer.c  gru_layer.h  im2col.h  image.c  layer.c  (+30 more)
